Added images, cleaned directories

--- a/aboutme.html
+++ b/aboutme.html
@@ -2,14 +2,14 @@
 <head>
     <meta charset="UTF-8">
     <title>About Me</title>
-    <link rel = "stylesheet" type: "text/css" href="style2.css">
+    <link rel = "stylesheet" type: "text/css" href="style.css">
 </head>
 <body>
  
 <header role="banner">
     <h1>Holly Bergen</h1>
 </header>
-
+<section class= intro>
 <img src="http://lorempixel.com/400/200" alt="Random Photo">
 (Random Photo)<br>
 
@@ -30,7 +30,7 @@ managed multiple clinical studies. I am now studying Data Science again at UCSD.
 <li><strong>GitHub:</strong> <a href="#"></a> </li>
 <li><strong>Facebook:</strong> <a href=""></a> </li>
 </ul>
-
+</section>
 
 
 </body>
